--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,15 +12,16 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
         <link rel='shortcut icon' type='image/png' href='http://www.iconarchive.com/download/i62986/dapino/medical/heart-beat-no-sh.ico'>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Courgette|Kaushan+Script|Ranga" rel="stylesheet">
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1 class="display-4">Matchmaker!</h1>
+    <div class="jumbotron" id='homeJum'>
+        <h1 class="display-4 jumboTitle">Matchmaker!</h1>
         <p class="lead">Answer a simple set of 10 questions to find your perfect match! </p>
         <hr class="my-4">
         <a class="btn btn-info" href="/survey" role="button">Begin Questionaire!</a>
-        <a href='http://google.com'>
+        <a href='https://github.com/justinkunz/FriendFinder'>
             <img id='gitLogo' class='frontLnk' src='https://melbournechapter.net/images/github-svg.png'>
         </a>
         <a href='/api/all'>
