--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,6 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <link rel='shortcut icon' type='image/png' href='http://www.iconarchive.com/download/i62986/dapino/medical/heart-beat-no-sh.ico'>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Courgette|Kaushan+Script|Ranga" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 
@@ -67,7 +68,7 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="q4">You prefer stayvactions to long distance travel</label>
+            <label for="q4">You prefer staycactions to long distance travel</label>
             <select class="form-control" id="q4">
                 <option>Select a Response</option>
                 <option>1</option>
@@ -111,7 +112,7 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="q8">You value honesty over anything else in a relation</label>
+            <label for="q8">You value honesty over anything else in a relationship</label>
             <select class="form-control" id="q8">
                 <option>Select a Response</option>
                 <option>1</option>
